--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -2,7 +2,7 @@ name: geoplanar_docs
 channels:
 - conda-forge
 dependencies:
-- python=3.7
+- python
 # dependencies
 - geopandas
 - libpysal
@@ -21,4 +21,5 @@ dependencies:
 - nbsphinx
 - pandoc
 - ipython
-- pydata-sphinx-theme
+- sphinx-book-theme
+- myst-nb
